data/Java/14-use-uninitialized-primary-variable/3/[M]Error.txt
http://www.java67.com/2016/07/how-to-fix-variable-might-not-have-been-initialized-error-in-java.html
Main.java:10: error: variable count might not have been initialized
    System.out.println(count);
                       ^